--- a/contact.html
+++ b/contact.html
@@ -46,8 +46,7 @@
             </div>
             
             <div class="nav__cta">
-                <a href="inscription.html" class="btn btn--outline btn--small">Se connecter</a>
-                <a href="inscription.html" class="btn btn--primary btn--small">S'inscrire</a>
+                <a href="contact.html" class="btn btn--outline btn--small">Contactez nous</a>
             </div>
             
             <div class="nav__toggle" id="nav-toggle">
